<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashScreen"
    android:background="@color/Teal">

    <RelativeLayout
        android:id="@+id/na"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_card2">

        <TextView
            android:id="@+id/loadads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/lblAdLoading"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/prograssbar"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/loadads"
            android:layout_centerInParent="true" />

        <com.facebook.ads.NativeAdLayout
            android:id="@+id/native_ad_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@+id/na"
        android:layout_marginTop="6dp"
        android:src="@drawable/splashscreenicon"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_centerHorizontal="true"
        android:text="@string/lblAppTitle"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:text="@string/lblAppSubTitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:text="@string/lblAppSubTitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />




</RelativeLayout>